<resources>
    <string name="app_name">180Switch</string>
    <string name="mic_icon">mic_icon</string>
    <string name="help_label">Help</string>
    <string name="exit">Exit?</string>
    <string name="name">User-ID</string>
    <string name="out">Log Out</string>
    <string name="nameinfo">nameinfo</string>

    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="exitCon">Do you want to exit?</string>


    <string name="app_open">Open</string>
    <string name="app_close">Close</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Speed</string>
    <string name="slide_1_desc">Ability to generate ideas quickly and clearly via speech.</string>
    <string name="slide_2_title">Disabilities </string>
    <string name="slide_2_desc">Ability to easily dictate for those who cannot operate a computer or write with their hands.</string>
    <string name="slide_3_title">Spelling</string>
    <string name="slide_3_desc">Ability to dictate to a program that can automatically spell out the word correctly on-screen. </string>
    <string name="nInfo">nInfo</string>
    <string name="no">No</string>

    <string name="speak">TAP ON THE MIC TO SPEAK</string>
    <string name="text">Your Text Goes Here ...</string>

    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome">WELCOME TO 180SWITCH</string>
    <string name="password">Password</string>
    <string name="email">Email-ID</string>

    <string name="login">LOGIN</string>

    <string name="settings">SETTINGS </string>
    <string name="seekbar">Move Seekbar to Set Volume</string>

    <string name="upload">UPLOAD </string>
    <string name="file">NAME OF FILE </string>
    <string name="select">SELECT A FILE TO UPLOAD </string>
    <string name="data">SEE DATA </string>


</resources>